--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "@types/d3": "^5.0.0",
     "d3": "^5.1.0",
-    "d3-cloud": "^1.2.5"
+    "d3-cloud": "^1.2.5",
+    "d3-interpolate": "^1.1.6",
+    "jquery": "^3.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
