--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Update resources
       uses: test-room-7/action-update-file@v1
       with:
-        file-path: classprofile/build/bundle.min.js
+        file-path: build/bundle.min.js
         commit-msg: Update bundle min js
         github-token: ${{ secrets.GITHUB_TOKEN }}
         allow-removing: true
